--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -22,14 +22,17 @@ The type of proxy voting in Congress is not the traditional type of proxy vote.
 Instead, it is more similar to voting remotely, as quarantining members need to
 meet via video conference and the delegated proxy is required vote exactly as
 directed on behalf of their constituents.
-\vicki{Since you aren't using this type of proxy, why mention it? If the best example you can give is one that isn't what you are doing, the reader is confused by why proxy voting is important.}
+\vicki{Since you aren't using this type of proxy, why mention it? If the best example
+you can give is one that isn't what you are doing, the reader is confused by why
+proxy voting is important.}
 Nevertheless, using proxy voting in such an important part of the legislative process
 reignites the discussion on the effectiveness of traditional proxy voting where the
 proxy is able to vote on behalf of their constituents as the proxy desires.
 The proxy being able to vote as they desire simplifies the voting process, but
-creates error in that information about the delegators' preferences is lost.  \vicki{How is it lost if their vote is captured?}
-Does proxy voting introduce too much error into the voting process? \vicki{How is error introduced?  The reader needs to understand how proxy voting is done.
-}
+creates error in that information about the delegators' preferences is lost.
+\vicki{How is it lost if their vote is captured?}
+Does proxy voting introduce too much error into the voting process? \vicki{How is
+error introduced? The reader needs to understand how proxy voting is done.}
 Or is it a viable alternative to direct voting?
 If proxy voting does introduce error, perhaps alternative voting mechanisms or systems
 can be used to mitigate that effect while still maintaining the benefits of proxy
@@ -105,7 +108,9 @@ them the most happy and determine an option the would best represent the group a
 whole.
 Alternatively, the proxy might decide to selfishly enhance its own voice by voting its
 own preference with all the weight allocated to it.
-\vicki{Calling it selfish seems too strong.  The inactive voters are asking a favor. It seems weird to say, "Please represent me, but alter your vote to be more what I want." 
+\vicki{Calling it selfish seems too strong. The inactive voters are asking a favor.
+It seems weird to say, "Please represent me, but alter your vote to be more what I
+want."
 }
 Such an act might have consequences, such as the proxy no longer being allowed to
 represent its constituents and so losing its additional weight.
@@ -114,7 +119,7 @@ Naturally, requiring the proxy to coordinate with its constituents increases the
 of the proxy, but can provide benefits for the systems in terms of accuracy, as well
 as in terms for the proxy by allowing them to aggregate more weight and so allow
 their voice to be stronger.
-We will explore several of these  methods and their impacts in our analysis.
+We will explore several of these methods and their impacts in our analysis.
 
 Proxy voting allows voters to skip incurring the costs while still having their voice
 heard by allowing a proxy to pay the cost once on behalf of all voters who transfer
@@ -148,7 +153,8 @@ order to bring the results closer to their opinion.\footnote{
     This delegation would go against the agents desires, but would pull the result of
     the vote more towards the agent's true preference, thereby yielding higher
     utility for that agent.
-}\vicki{But this isn't really a function of proxy voting.  This is just strategic voting.  They could/would do the same thing if they were physically present.}
+}\vicki{But this isn't really a function of proxy voting. This is just strategic
+voting. They could/would do the same thing if they were physically present.}
 These questions on strategy in proxy voting are important, but in order to first
 determine if proxy voting would even be useful, this study employs a similar technique
 as used in~\cite{Cohensius2017}, which has the voters pass their voting power to the
@@ -169,7 +175,8 @@ would have low accuracy and low welfare.
 In regard to proxy voting, the excellent system would maximize the use of proxies
 without degrading the accuracy of the system, while the poor would require all
 proxies to vote directly and still have high error.
-\vicki{Carried to extreme, however, everyone would vote remotely. This discounts the valuable discussion that happens in meetings.}
+\vicki{Carried to extreme, however, everyone would vote remotely. This discounts the
+valuable discussion that happens in meetings.}
 
 Proxy voting has been shown to increase system accuracy when compared to only
 allowing active/willing agents to vote~\cite{Cohensius2017}.
@@ -189,18 +196,21 @@ this additional system welfare comes at the cost of some system accuracy in term
 the actual preferences of the voters.
 This cost comes about because proxies will likely not vote exactly the same as their
 constituents due to having different preferences.
-\vicki{If this were the real problem, we could just make proxies vote exactly as their constituents desired.  They could just vote for each one individually. {.2, .3, .33, .5}.  To me the problem is that votes change with discussion, so the proxy is entrusted to make decisions as amendments and new issues are raised.
-
+\vicki{If this were the real problem, we could just make proxies vote exactly as
+their constituents desired. They could just vote for each one individually. {.2, .3,
+.33, .5}. To me the problem is that votes change with discussion, so the proxy is
+entrusted to make decisions as amendments and new issues are raised.
+%
 Before going into specific examples, give us the structure for how proxies operate.
-
+%
 Aggregation: mean, median, lp aggregation, plurality
-
-Voting:  continuous space, finite set of options   
-(Note, we are assuming even a finite set of options are ordered.  This isn't always the case, right?  If my vote is between Sarah, Joe, and John, there may not be a linear ordering that all agree to.
-
-Proxy: averages votes of constituents.  Votes their own preference.
-
-
+%
+Voting: continuous space, finite set of options
+    (Note, we are assuming even a finite set of options are ordered. This isn't
+    always the case, right? If my vote is between Sarah, Joe, and John, there may not
+    be a linear ordering that all agree to.
+    %
+    Proxy: averages votes of constituents. Votes their own preference.
 }
 
 This causes information about the delegators' preferences to be lost and the system's
@@ -213,10 +223,13 @@ to recover some lost information by allowing agents to delegate their vote to a 
 with a similar preference.
 
 % TODO: Move to Future Work section once I have one
-% In some cases, the proxy is also able to transfer their own vote, as well as the rest of
+% In some cases, the proxy is also able to transfer their own vote, as well as the
+% rest of
 % their delegated weight, to yet another proxy.
-% This is known as \textit{liquid democracy}, which has its own challenges and advantages.
-% Ultimately, the use of liquid democracy is not considered in this study, but since proxy
+% This is known as \textit{liquid democracy}, which has its own challenges and
+% advantages.
+% Ultimately, the use of liquid democracy is not considered in this study, but since
+% proxy
 % voting is a subset of the liquid democracy system, it would likely be possible to
 % extend the results of this study to liquid democracy as well.  \vicki{This could be
 % described in a future work section, but seems to have no purpose here.}
@@ -238,7 +251,10 @@ preferences.
         The x-axis represents some preference space, where the leftmost point is
         the most preference most against some idea and the rightmost point is the most
         preference most in favor of the same idea.
-        Importantly, points towards the center of the space are more ambivalent \vicki{ambivalent seems too strong.  According to the dictionary: it means you have contradictory or mixed feelings about it.  Couldn't you just like the centrist approach?  }  about
+        Importantly, points towards the center of the space are more ambivalent
+        \vicki{ambivalent seems too strong. According to the dictionary: it means you
+        have contradictory or mixed feelings about it. Couldn't you just like the
+        centrist approach?  }  about
         the topic or prefer a more moderate approach than the extremes on either end.
     }
     \label{fig:system-metric-space}
@@ -249,17 +265,22 @@ Votes are aggregated into an output using a \textit{voting mechanisms} or
 Two common voting mechanisms are the \textit{plurality} and \textit{mean} voting rules.
 The mean mechanism inherently works to a continuous space, since it can take all
 preferences, multiply them by their weights, and then average them.
-Plurality  \vicki{Define first, before adapting.}, on the other hand, needs to be adapted to operate in a continuous space.
+Plurality  \vicki{Define first, before adapting.}, on the other hand, needs to be
+adapted to operate in a continuous space.
 In our implementation, we will treat plurality as if the proxies themselves were
 candidates.
 This is similar to the framework in~\cite{Bulteau2021} treating each preference as a
 proposal.
 As such, the plurality mechanism will select the preference of the active voter with
 the most weight.
-\vicki{This doesn't seem right, as it gives the advantage to proxy voters. On a continuous space, plurality doesn't really make sense. This makes more sense to me.  If there are three real options (-1, 0, 1), count the number of voters in equal ranges about these points.  Select the option with the most votes.}
+\vicki{This doesn't seem right, as it gives the advantage to proxy voters. On a
+continuous space, plurality doesn't really make sense. This makes more sense to me.
+If there are three real options (-1, 0, 1), count the number of voters in equal
+ranges about these points. Select the option with the most votes.}
 
 Proxy voting may seem like an extremely attractive option for the House of
-Representatives, and other organizations, to use.  \vicki{We aren't ready for this example as we don't know how the proxies deal with a variety of constituent votes.} 
+Representatives, and other organizations, to use.  \vicki{We aren't ready for this
+example as we don't know how the proxies deal with a variety of constituent votes.}
 However, it is not without its flaws.
 As a simple example, consider a vote taking over preference
 space $\systemspace = [-1, 1]$ with agent preferences $\truthof{\agent_1} = -1$,
@@ -355,7 +376,9 @@ If the majority of votes are hovering around the center, say in the interval
 $[-0.25, 0.25]$, then it is likely that the majority of voters are not actually fully
 satisfied by the law, but still believe some change is necessary.
 In other words, neither option is satisfactory.
-\vicki{Here you are assuming that the middle option isn't really a choice.  There are only two options.  Since we don't know which options are really possible, this is confusing.  Try considering the cases (binary, continuous) separately.  }
+\vicki{Here you are assuming that the middle option isn't really a choice. There are
+only two options. Since we don't know which options are really possible, this is
+confusing. Try considering the cases (binary, continuous) separately.  }
 This provides a third option: refactoring the law to be more in line with the
 voters' opinions.
 Such an option is extremely beneficial, since without it voters are encouraged to
@@ -402,7 +425,7 @@ set of active voters, the mechanisms we use are
         $\input{content/figures/equations/weighted-median}$.
         Essentially, the median is the agent whose additional weight makes the sum of
         weights becomes equal to or greater than half the total weight of the system.
-        The sum will occur in the same order as the ordering of voters in 
+        The sum will occur in the same order as the ordering of voters in
         \systemproxies.
     }
     \item {
@@ -473,7 +496,6 @@ This study will focus primarily on the continuous instead of the discrete output
 the model, since observing the continuous output allows for more granularity in the
 differences between proxy and non-proxy voting, as well as in the differences between
 voting rules.
-
 
 \subsection{Assumptions}\label{subsec:assumptions}
 In order to conduct this study, we make a number of assumptions.
