Refactored file setup

--- a/thesis.tex
+++ b/thesis.tex
@@ -151,10 +151,10 @@
     %{{{ The main body of the thesis
     \body  % set main body style
     % Chapters
-    \include{content/chapter1-introduction}
-    % \include{content/chapter2-experimental-design}
-    % \include{content/chapter3-results}
-    % \include{content/chapter4-conclusions-and-further-work}
+    \include{chapter1-introduction}
+    % \include{chapter2-experimental-design}
+    % \include{chapter3-results}
+    % \include{chapter4-conclusions-and-further-work}
 
     % Endmatter
     % For BibTeX references: specify a .bib file and a style.
