Added cereal reference

--- a/references/research.bib
+++ b/references/research.bib
@@ -314,6 +314,16 @@ Must follow instructions exactly: <https://www.congress.gov/bill/116th-congress/
   publisher = {National Paralegal College},
 }
 
+@Misc{Curtis2021,
+  author    = {Curtis, Charles},
+  title     = {The Ultimate Breakfast Cereal Bracket: Vote for your favorite in the first round},
+  url       = {https://ftw.usatoday.com/2021/03/best-breakfast-cereals-ranked-bracket},
+  journal   = {USA Today},
+  month     = {Mar},
+  publisher = {Gannett Satellite Information Network},
+  year      = {2021},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectoryLatex-micha-CrimsonSpace:D:\\Projects\\Thesis-Experiments\\Report;}
