--- a/chapter1-introduction.tex
+++ b/chapter1-introduction.tex
@@ -12,8 +12,8 @@ However, disease, injury, and other impediments can create difficulties for indi
 participating in such democratic processes, preventing them from expressing their
 voice and participating in deliberation, as well as decreasing the overall quality of
 the result.
-We examine the ability of \textit{proxy voting}, a method by which participants are able
-to have others vote on their behalf, to decrease the impact of such frustrations.
+We examine the ability of proxy voting, a method by which participants are able to
+have others vote on their behalf, to decrease the impact of such frustrations.
 We additionally determine strategies by which proxies and their constituents can
 cooperate in order to reduce the change their absence would otherwise cause.
 These strategies include having voters vote in a continuous space, allowing proxies
