--- a/chapter1-introduction.tex
+++ b/chapter1-introduction.tex
@@ -18,40 +18,9 @@ We additionally determine strategies by which proxies and their constituents can
 cooperate in order to reduce the change their absence would otherwise cause.
 These strategies include having voters vote in a continuous space, allowing proxies
 and constituents to aggregate their preference into one result, as well as
-determining how best to aggregate all votes.
+determining how best to aggregate all votes in a single-vote/single-winner 1D
+continuous space model.
 
-% On May 13th, 2020, the 116th United States Congress introduced a resolution
-% to permit the use of proxy voting during emergencies for members of the House of
-% Representatives~\cite{Congress.gov2020}, which would allow members to participate in
-% proceedings remotely while still having someone physically present to submit the
-% member's vote on their behalf.
-% This resolution was passed on May 15th, 2020, and as indicated by proxy designation
-% letters sent to the Clerk of the House of Representatives~\cite{Clerk.House.gov2022},
-% was put to use as soon as five days later.
-% The purpose behind the resolution was to allow the House of Representatives
-% to continue operating while still allowing members to quarantine and prevent the
-% spread of COVID-19~\cite{Congress.gov2020}, as well as to pave the way for future use
-% of proxy voting in other such emergencies.
-% The type of proxy voting in Congress is not the traditional type of proxy vote.
-% Instead, it is more similar to voting remotely, as quarantining members need to
-% meet via video conference and the delegated proxy is required vote exactly as
-% directed on behalf of their constituents.
-% \vicki{Since you aren't using this type of proxy, why mention it? If the best example
-% you can give is one that isn't what you are doing, the reader is confused by why
-% proxy voting is important.}
-% Nevertheless, using proxy voting in such an important part of the legislative process
-% reignites the discussion on the effectiveness of traditional proxy voting where the
-% proxy is able to vote on behalf of their constituents as the proxy desires.
-% The proxy being able to vote as they desire simplifies the voting process, but
-% creates error in that information about the delegators' preferences is lost.
-% \vicki{How is it lost if their vote is captured?}
-% Does proxy voting introduce too much error into the voting process? \vicki{How is
-% error introduced? The reader needs to understand how proxy voting is done.}
-% Or is it a viable alternative to direct voting?
-% If proxy voting does introduce error, perhaps alternative voting mechanisms or systems
-% can be used to mitigate that effect while still maintaining the benefits of proxy
-% voting.
-%
 % This study attempts to answer these questions by analyzing the effects of proxy
 % voting on the results of a vote under a number of preference distributions.
 % We employ several voting mechanisms and rank them according to their performance when
@@ -76,8 +45,8 @@ determining how best to aggregate all votes.
 
 \input{content/chapter1/background}
 
-\input{content/chapter1/model-and-assumptions}
-
 \input{content/chapter1/previous-work}
+
+\input{content/chapter1/model-and-assumptions}
 
 \input{content/chapter1/contribution}
