--- a/chapter1-introduction.tex
+++ b/chapter1-introduction.tex
@@ -20,33 +20,13 @@ These strategies include having voters vote in a continuous space, allowing prox
 and constituents to aggregate their preference into one result, as well as
 determining how best to aggregate all votes in a single-vote/single-winner 1D
 continuous space model.
-
-% This study attempts to answer these questions by analyzing the effects of proxy
-% voting on the results of a vote under a number of preference distributions.
-% We employ several voting mechanisms and rank them according to their performance when
-% applied under several preference distributions.
-% We additionally explore the use of cooperative mechanisms, which determine how and
-% under what rules proxies cooperate, or don't cooperate, with their constituents.
-% Finally, as a part of this study we implement and describe voting over a continuous
-% interval instead of the typical binary (in favor or against) vote.
-%
-% This topic is of large importance because of the potential ramifications of using
-% proxy voting directly in the legislative and other processes.
-% If proxy voting does not have a large effect on the results of the vote, then it
-% can be used to significantly ease the process and lower the risk of participating in
-% Congress during pandemics or other emergencies.
-% Similarly, if proxy voting can be shown to have a large effect on the results of the
-% vote, it would be important to alter the system to mitigate the effects or stop using
-% proxy voting altogether.
-% In either case, it is important to understand the effects of proxy voting in order to
-% utilize it in the most effective way possible, as well as discover any potential
-% techniques to improve such a system.
-
-
+s
 \input{content/chapter1/background}
 
 \input{content/chapter1/previous-work}
 
-\input{content/chapter1/model-and-assumptions}
+\input{content/chapter1/model}
+
+\input{content/chapter1/assumptions}
 
 \input{content/chapter1/contribution}
