--- a/chapter1-introduction.tex
+++ b/chapter1-introduction.tex
@@ -18,9 +18,9 @@ We additionally determine strategies by which proxies and their constituents can
 cooperate in order to reduce the change their absence would otherwise cause.
 These strategies include having voters vote in a continuous space, allowing proxies
 and constituents to aggregate their preference into one result, as well as
-determining how best to aggregate all votes in a single-vote/single-winner 1D
-continuous space model.
-s
+determining how best to aggregate all votes in a single-vote/single-winner
+single-dimension continuous space models.
+
 \input{content/chapter1/background}
 
 \input{content/chapter1/previous-work}
