--- a/chapter1-introduction.tex
+++ b/chapter1-introduction.tex
@@ -14,6 +14,7 @@ voice and participating in deliberation, as well as decreasing the overall quali
 the result.
 We examine the ability of proxy voting, a method by which participants are able to
 have others vote on their behalf, to decrease the impact of such frustrations.
+\vicki{Clearer to break into two sentences, giving the definition first.}
 We additionally determine strategies by which proxies and their constituents can
 cooperate in order to reduce the change their absence would otherwise cause.
 These strategies include having voters vote in a continuous space, allowing proxies
