--- a/abstract.tex
+++ b/abstract.tex
@@ -11,18 +11,19 @@
     itself.
     Without participation, the results of the vote may change.
     There is a need to provide a mechanism by which agents are still able to
-    participate in such processes to prevent changing the result of the vote.\vicki{to ensure their vote is represented}
+    participate in such processes to ensure their vote is represented.
     We examine single-vote/single-winner proxy voting in a one-dimension continuous
     preference space using a combination of $L_p$ aggregation methods.
     As part of this examination, we develop and examine `coordination mechanisms,' by
-    which proxies and their constituents are able to compromise
-    \vicki{combine?  may not be a compromise} on their preferences in
-    order for constituents to still have their voices heard.
+    which proxies and their constituents are able to find a way to combine their
+    preferences in order for constituents to still have their voices heard.
     In exchange, their proxy gains more weight and is able to have a stronger voice in
     deliberations.
     We employ a continuous preference space model and determine the result of a vote
-    as a point in the model's space instead of the vote simply passing or failing.
-    \vicki{Couldn't this also be an option for the design?}
+    as a point in the model's space.
+    This model allows for more options than the vote only passing or failing by
+    allowing the outcome to directly correlate to actions to be taken, such as the
+    amount of money to spend.
     This increases granularity of the results and determine how much error is
     introduced due to proxy voting, as well as provide a more expressive way of
     casting a vote.
