Updated Previous Work

--- a/thesis.tex
+++ b/thesis.tex
@@ -90,6 +90,11 @@
 \usepackage{hhline}  % MDH: For double lines in tables
 \usepackage{tkz-euclide}  % MDH: To make it easier to label points in Tikz
 \usepackage{xfrac}  % MDH: Additional fraction commands
+\usepackage{makecell}  % MDH: Better controls in tables
+\renewcommand\theadalign{bc}
+\renewcommand\theadfont{\bfseries}
+\renewcommand\theadgape{\Gape[4pt]}
+\renewcommand\cellgape{\Gape[4pt]}
 
 % To control where figures are output
 \usepackage{epstopdf}
