--- a/thesis.tex
+++ b/thesis.tex
@@ -109,8 +109,8 @@
 % Author and Title Information
 \author{Michael D. Hegerhorst}
 \title{
-    An Exploration into the Use of Proxy Votes in the United States House of
-    Representatives
+    Proxy Voting Coordination Mechanisms:
+    Determining How Agents should Coordinate in a Continuous Preference Space
 }
 
 
