--- a/abstract.tex
+++ b/abstract.tex
@@ -24,9 +24,9 @@
     This model allows for more options than the vote only passing or failing by
     allowing the outcome to directly correlate to actions to be taken, such as the
     amount of money to spend.
-    This increases granularity of the results and determine how much error is
-    introduced due to proxy voting, as well as provide a more expressive way of
-    casting a vote.
+    Such an ability increases the granularity of the results and allows us to
+    better determine how much error is introduced by proxy voting.
+    The ability also provides a more expressive way of casting a vote.
     % TODO: Put in a bit of what we discover
 
 
