--- a/chapter1-introduction.tex
+++ b/chapter1-introduction.tex
@@ -17,10 +17,9 @@ behalf.
 We examine the ability of proxy voting to decrease the impact of such frustrations.
 We additionally determine strategies by which proxies and their constituents can
 cooperate in order to reduce the change their absence would otherwise cause.
-These strategies include having voters vote in a continuous space, allowing proxies
-and constituents to aggregate their preference into one result, as well as
-determining how best to aggregate all votes in a
-unified-vote/single-winner/single-dimension continuous space models.
+These strategies include allowing proxies and constituents to aggregate their
+preference into one result, as well as determining how best to aggregate all votes in
+a unified-vote/single-winner/single-dimension continuous space model.
 
 \input{content/chapter1/background}
 
