--- a/thesis.tex
+++ b/thesis.tex
@@ -95,6 +95,7 @@
 \renewcommand\theadfont{\bfseries}
 \renewcommand\theadgape{\Gape[4pt]}
 \renewcommand\cellgape{\Gape[4pt]}
+\usepackage{pifont}
 
 % To control where figures are output
 \usepackage{epstopdf}
