Update on Overleaf.

--- a/thesis.tex
+++ b/thesis.tex
@@ -110,7 +110,7 @@
 % Author and Title Information
 \author{Michael D. Hegerhorst}
 \title{
-    Proxy Voting Coordination Mechanisms:
+    Proxy Voting Coordination Mechanisms:\\
     Determining How Agents should Coordinate in a Continuous Preference Space
 }
 
