Update on Overleaf.

--- a/content/figures/equations/weighted-midrange.tex
+++ b/content/figures/equations/weighted-midrange.tex
@@ -7,3 +7,5 @@
         \weightof{\agent_{\text{lowest}}}
         + \weightof{\agent_{\text{highest}}}
     }
+% TODO: I'm not so sure this equation is correct. Should it simply be the unweighted version.
+%   Consider how mean and median are calculated. They make sense because each agent has a weight of 1. However, unweighted midrange ignores those weights and simple takes the larges and smallest votes. Should the "weighted" version not also ifnore those weights?
