--- a/thesis.tex
+++ b/thesis.tex
@@ -1,180 +1,14 @@
-%
-%  --- USU thesis and dissertation template ---
-%
-% Time-stamp: "[thesis.tex] last modified by Scott Budge (scott) on 2022-04-26 (Tuesday, 26 April 2022) at 11:43:40 on goga"
-%
-%  Modified to use the new usuthesis.cls by Allan McInnes
-%
-%  Specify department ('ee' or 'ce' or 'me' or 'ae' or 'cee') and document type ('msthesis',
-%  'msreport', or 'dissertation') in the documentclass options. 
-%
-%  Including the 'proposal' option will generate a proposal for a thesis
-%  or dissertation, rather than a final document (this mostly just 
-%  alters the cover page).
-%
-%  See the opening comments of usuthesis.cls for more information on 
-%  available options
-%
-%  To create finished document run:
-%    latex thesis.tex
-%    bibtex thesis (or sample-chapter1, etc., if using multiple-paper format)
-%    latex thesis.tex
-%    latex thesis.tex
-%
-%  Info: $Id: thesis.tex 1183 2021-06-28 16:49:30Z scott $   USU
-%  Revision: $Rev: 1183 $
-% $LastChangedDate: 2021-06-28 10:49:30 -0600 (Mon, 28 Jun 2021) $
-% $LastChangedBy: scott $
-%
-
-% For the ECE Department:
-%\documentclass[ee,msthesis]{usuthesis}
-%\documentclass[ce,msthesis]{usuthesis}
-%\documentclass[ee,dissertation]{usuthesis}
-%\documentclass[ee,proposal]{usuthesis}
-%\documentclass[ce,dissertation]{usuthesis}
-% For the MAE Department:
-%\documentclass[me,msthesis]{usuthesis}
-%\documentclass[ae,msthesis]{usuthesis}
-%\documentclass[me,dissertation]{usuthesis}
-%\documentclass[ae,dissertation]{usuthesis}
-% For the CEE Department:
-%\documentclass[cee,msthesis]{usuthesis}
-%\documentclass[cee,dissertation]{usuthesis}
-
-% TODO: Swap these two once I start writing the thesis
-\documentclass[cs,msthesis]{usuthesis}
-
-%{{{ Packages
-\usepackage{amssymb}           % add ams symbols stuff
-\usepackage{graphicx}          % add graphics
-\usepackage{subcaption}
-\usepackage{url}
-\usepackage{flafter}           % Cause floats to appear after
-                               % environment.
-                               % MDH: This was originally commented out.
-%\usepackage{siunitx}           % Provides standard formatting of SI units.
-\usepackage{listings}          % Use when including computer code.
-
-% Include TikZ and PGF packages for high-quality graphics, schematics
-% and plots. This is optional; at the current time, when run with
-% latex to create a .dvi file, the xdvi viewer will produce incorrect
-% formatting for the TikZ figures.  If the .dvi file is converted to
-% pdf using "dvipdf" the resulting pdf file is correct.  If this
-% example is used with  pdflatex, the resulting TikZ figures in the
-% output look fine.
-\usepackage{tikz}       		% The base tikz+pgf package
-\usetikzlibrary{arrows,shapes}	% Optional tikz extensions
-\usepackage[american]{circuitikz}	% TikZ-based package for schematic drawings
-\usepackage{pgfplots}			% Tikz-based package for making plots
-\pgfplotsset{compat=1.6}        % This *might* be necessary for your
-                                % version of pgfplots.
-
-\usepackage{hyperref} % Creates hyperlinks within document
-\hypersetup{colorlinks=true, linkcolor=blue,
-    citecolor=blue,urlcolor=blue} % Use when compiling the digital copy
-% \hypersetup{colorlinks=true, linkcolor=black,
-% citecolor=black,urlcolor=black} % Use when compiling the printed copy
-
-% The following allows for hyperlinked DOIs to be inserted in the
-% manuscript by using \doi{}.
-\usepackage{doi}
-
-\usepackage{enumitem} % MDH: Used for more controls over `enumerate`
-\usepackage{amsmath} % MDH: For math functions
-\usepackage{amsfonts} % MDH: For math fonts
-
-\usepackage{util} % MDH: Contains my custom commands
-\usepackage{notations} % MDH: So I don't have to repeat myself so much
-\usepackage{hhline}  % MDH: For double lines in tables
-\usepackage{tkz-euclide}  % MDH: To make it easier to label points in Tikz
-\usepackage{xfrac}  % MDH: Additional fraction commands
-\usepackage{makecell}  % MDH: Better controls in tables
-\renewcommand\theadalign{bc}
-\renewcommand\theadfont{\bfseries}
-\renewcommand\theadgape{\Gape[4pt]}
-\renewcommand\cellgape{\Gape[4pt]}
-\usepackage{pifont}
-
-% To control where figures are output
-\usepackage{epstopdf}
-\pdfminorversion=7 % Because epstopdf outputs as version 1.7
-
-
-% Set spacing around figures and tables to triple space
-\setlength{\intextsep}{2em} % Vertical space above & below [h] floats
-\setlength{\textfloatsep}{2em} % Vertical space below (above) [t] ([b]) floats
-
-% The following is added if you are using the multiple-paper format to
-% add references after each chapter:
-% \usepackage[sectionbib]{chapterbib}
-
-% Author and Title Information
-\author{Michael D. Hegerhorst}
-\title{
-    Proxy Voting Coordination Mechanisms:\\
-    Determining How Agents should Coordinate in a Continuous Preference Space
-}
-
-
-\newcommand{\vicki}[1]{\textcolor{blue}{Vicki: #1}}
-
-% The Committee
-\majorprof{Vicki Allan, Ph.D.}
-\firstreader{John Edwards, Ph.D.}
-\secondreader{Shuhan Yuan, Ph.D.}
-%\thirdreader{Gottfried Liebniz, Ph.D.}
-%\fourthreader{Isaac Newton, Ph.D.}
-
-% Graduate Dean
-% TODO: Add the name and title of the CS graduate dean
-\graddean{FIX ME: CS GRADUATE DEAN}
-\deantitle{FIX ME: CS GRADUATE DEAN}
-
-% Degree Information
-% TODO: Should this be "Master of Science in Computer Science?"
-\degree{Master of Science}
-\month{April}
-\gradyear{2023}
+\input{common/prelude}
+\input{common/cover-page}
 
 \begin{document}
-    %{{{ Frontmatter
-    \preliminaries   % set frontmatter style
+    \input{common/frontmatter}
 
-    \maketitle
-    \makecopyright        % optional
-
-    \include{abstract}
-    % \include{publicabstract}
-    % \include{content/frontmatter/dedication}  % optional
-%    \include{acknowl}     % optional TODO: Do I want acknowledgements?
-
-    \tableofcontents
-    \listoftables
-    \listoffigures
-
-    % \include{content/frontmatter/notation}  % optional
-    % \include{content/frontmatter/acronyms}  % optional
-    %}}}
     %{{{ The main body of the thesis
     \body  % set main body style
     % Chapters
     \include{chapter1-introduction}
     \include{chapter2-results}
 
-    % Endmatter
-    % For BibTeX references: specify a .bib file and a style.
-    % The style used here is for IEEE transactions formatting:
-    \references{
-        references/IEEEabrv,
-        references/research}
-    {IEEEtran}
-
-    % The style used here is for AIAA formatting:
-
-    % \include{content/endmatter/appendix}
-    
-
-%    \include{vita}  % FIXME: I don't think I actually need this unless I'm a doctorate.
-    %}}}
+    \input{common/endmatter}
 \end{document}
