--- a/common/endmatter.tex
+++ b/common/endmatter.tex
@@ -3,4 +3,4 @@
 % The style used here is for IEEE transactions formatting:
 \references{references/IEEEabrv,references/research}{IEEEtran}
 
-\include{content/endmatter/appendix}
+% \include{content/endmatter/appendix} TODO Update
