--- a/common/frontmatter.tex
+++ b/common/frontmatter.tex
@@ -5,14 +5,14 @@
 \makecopyright        % optional
 
 \include{abstract}
-\include{publicabstract}
-\include{content/frontmatter/dedication}  % optional
+% \include{publicabstract} TODO: Update
+% \include{content/frontmatter/dedication}  % optional TODO: Update
 %    \include{acknowl}     % optional TODO: Do I want acknowledgements?
 
 \tableofcontents
 \listoftables
 \listoffigures
 
-\include{content/frontmatter/notation}  % optional
-\include{content/frontmatter/acronyms}  % optional
+% \include{content/frontmatter/notation}  % optional TODO: Update
+% \include{content/frontmatter/acronyms}  % optional TODO: Update
 %}}}
