Started working on chapter 2

--- a/chapter2-results.tex
+++ b/chapter2-results.tex
@@ -16,7 +16,26 @@
     %%%%%%%% This line gets rid of page number on first page of text
     \thispagestyle{empty}
     %%%%%%%%%%%%%
-    TODO
+    From determining the best breakfast cereal~\cite{Curtis2021} to electing the next
+    president, voting has become an important aspect of modern society.
+    However, disease, injury, and other impediments can create difficulties for individuals
+    participating in such democratic processes, preventing them from expressing their
+    voice and participating in deliberation, as well as decreasing the overall quality of
+    the result.
+    Proxy voting is a method by which participants are able to have others vote on their
+    behalf.
+    We examine the ability of proxy voting to decrease the impact of such frustrations.
+    We additionally determine strategies by which proxies and their constituents can
+    cooperate in order to reduce the change their absence would otherwise cause.
+    These strategies include allowing proxies and constituents to aggregate their
+    preference into one result, as well as determining how best to aggregate all votes in
+    a unified-vote/single-winner/single-dimension continuous space model.
+
+    \input{content/chapter2/background}
+    \input{content/chapter2/model}
+    \input{content/chapter2/assumptions}
+    \input{content/chapter2/contribution}
+    \input{content/chapter2/results}
 
     \input{common/endmatter}
 \end{document}
