--- a/chapter2-results.tex
+++ b/chapter2-results.tex
@@ -17,11 +17,11 @@
     \thispagestyle{empty}
     %%%%%%%%%%%%%
     From determining the best breakfast cereal~\cite{Curtis2021} to electing the next
-    president, voting has become an important aspect of modern society.
-    However, disease, injury, and other impediments can create difficulties for individuals
-    participating in such democratic processes, preventing them from expressing their
-    voice and participating in deliberation, as well as decreasing the overall quality of
-    the result.
+    president, voting is an extremely important aspect of modern society.
+    Nevertheless, disease, injury, and other impediments can create difficulties for
+    individuals participating in such democratic processes, preventing them from
+    expressing their voice and participating in deliberation, as well as decreasing
+    the overall quality of the result.
     Proxy voting is a method by which participants are able to have others vote on their
     behalf.
     We examine the ability of proxy voting to decrease the impact of such frustrations.
@@ -32,7 +32,7 @@
     a unified-vote/single-winner/single-dimension continuous space model.
 
     \input{content/chapter2/background}
-    \input{content/chapter2/model}
+    \input{content/chapter2/preliminaries}
     \input{content/chapter2/assumptions}
     \input{content/chapter2/contribution}
     \input{content/chapter2/results}
