--- a/chapter1-introduction.tex
+++ b/chapter1-introduction.tex
@@ -33,7 +33,7 @@
 
     \input{content/chapter1/background}
     \input{content/chapter1/previous-work}
-    \input{content/chapter1/model}
+    \input{common/preliminaries}
     \input{content/chapter1/assumptions}
     \input{content/chapter1/contribution}
 
