--- a/chapter2-results.tex
+++ b/chapter2-results.tex
@@ -32,7 +32,7 @@
     a unified-vote/single-winner/single-dimension continuous space model.
 
     \input{content/chapter2/background}
-    \input{content/chapter2/preliminaries}
+    \input{common/preliminaries}
     \input{content/chapter2/assumptions}
     \input{content/chapter2/contribution}
     \input{content/chapter2/results}
