--- a/common/preliminaries.tex
+++ b/common/preliminaries.tex
@@ -186,6 +186,8 @@ We will examine five different `coordination' mechanisms:
         This represents situations where a proxy is considered an expert, but the
         constituents impose a condition that the proxy can only represent them if
         they vote a certain way.
+
+        Note this is analogous to only having the active agents vote.
     }
 \end{enumerate}
 These mechanisms are used in an attempt to simulate real-world consequences of proxy
