--- a/common/preliminaries.tex
+++ b/common/preliminaries.tex
@@ -160,6 +160,10 @@ We will examine five different `coordination' mechanisms:
         The proxy allocates its weight to its own preference.
     }
     \item {
+        \textit{No preference change - Active Only}.
+        Only active agents vote.
+    }
+    \item {
         \textit{No preference change - Cooperative Mean}.
         The proxy allocates its weight to the mean of its own and its constituents'
         preferences.
@@ -188,6 +192,18 @@ We will examine five different `coordination' mechanisms:
         they vote a certain way.
 
         Note this is analogous to only having the active agents vote.
+    }
+    \item {
+        \textit{Preference change - Cooperative Mean}.
+        The proxy allocates its weight to the mean of its own and its constituents'
+        preferences.
+        However, preferences have changed due to deliberation.
+    }
+    \item {
+        \textit{Preference change - Cooperative Median}.
+        The proxy allocates its weight to the median of its own and its constituents'
+        preferences.
+        However, preferences have changed due to deliberation.
     }
 \end{enumerate}
 These mechanisms are used in an attempt to simulate real-world consequences of proxy
