--- a/chapter2-results.tex
+++ b/chapter2-results.tex
@@ -4,6 +4,8 @@
 \documentclass[cs,msthesis]{usuthesis}
 
 \input{common/prelude}
+\usepackage{pdflscape}
+
 \input{common/cover-page}
 
 \begin{document}
