--- a/chapter2-results.tex
+++ b/chapter2-results.tex
@@ -38,6 +38,7 @@
     \input{content/chapter2/assumptions}
     \input{content/chapter2/contribution}
     \input{content/chapter2/results}
+    \input{content/chapter2/conclusions}
 
     \input{common/endmatter}
     \include{content/endmatter/appendix}
