Setup paper for release

--- a/common/frontmatter.tex
+++ b/common/frontmatter.tex
@@ -5,9 +5,9 @@
 \makecopyright        % optional
 
 \include{abstract}
-% \include{publicabstract} TODO: Update
-% \include{content/frontmatter/dedication}  % optional TODO: Update
-%    \include{acknowl}     % optional TODO: Do I want acknowledgements?
+\include{publicabstract} % TODO: Update
+\include{content/frontmatter/dedication}  % optional
+%\include{acknowl}     % optional TODO: Do I want acknowledgements?
 
 \tableofcontents
 \listoftables
