--- a/abstract.tex
+++ b/abstract.tex
@@ -27,7 +27,8 @@
     Such an ability increases the granularity of the results and allows us to
     better determine how much error is introduced by proxy voting.
     The ability also provides a more expressive way of casting a vote.
-    % TODO: Put in a bit of what we discover
+    We show that proxy voting is effective in many scenarios, and that it is
+    consistently better than not allowing inactive agents to vote.
 
 
 \end{abstract}
