--- a/content/frontmatter/dedication.tex
+++ b/content/frontmatter/dedication.tex
@@ -11,10 +11,11 @@
 %
 
 \begin{dedication}
-\begin{center}
-% TODO: Fill out with something sweet about Danielle
-FIX ME
-\end{center}
+% \begin{center}
+    To Danielle, my constant companion and eternal partner.
+
+    Thank you for persisting with me as we endured this roller coaster.
+% \end{center}
 % 
 % If you intend to have a dedication longer than one line, do not put
 % it in a centering environment.  It will look better.
