--- a/publicabstract.tex
+++ b/publicabstract.tex
@@ -12,7 +12,23 @@
 % A space is needed before the text starts so that the first paragraph
 % is indented properly.
 
-    % TODO: Rewrite
+    Illness, injury, and other impediments are common occurrences in every day.
+    Such impediments prevent or deter voters from participating in important parts
+    of the voting process, especially deliberation, bargaining, and the voting
+    itself.
+    Without participation, the results of the vote may change.
+    There is a need to provide a system with which voters are still able to
+    participate in important voting processes to ensure their vote is represented.
+    We explore `proxy voting,' a system in which voters are able to select another
+    individual, or \textit{proxy}, to vote on their behalf.
+    By choosing a good proxy, a voter can still have their vote represented how they
+    want and cause minimal change to the outcome.
+    We additionally explore different ways a proxy can coordinate with their peers,
+    as well as different ways to count votes, in order to make proxy voting as
+    effective as possible.
+    We show that proxy voting is effective in many scenarios, and that it is
+    consistently better than not allowing voters who are unable to fully participate to
+    have their voice heard.
 
 \end{publicabstract}
 
