--- a/chapter2-results.tex
+++ b/chapter2-results.tex
@@ -41,5 +41,5 @@
     \input{content/chapter2/conclusions}
 
     \input{common/endmatter}
-    \include{content/endmatter/appendix}
+    \input{content/endmatter/appendix}
 \end{document}
